--- a/Prueba1/nbproject/private/private.properties
+++ b/Prueba1/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\cmard\\AppData\\Roaming\\NetBeans\\14\\build.properties
+user.properties.file=C:\\Users\\Cristian\\AppData\\Roaming\\NetBeans\\15\\build.properties
